Change title from 'Crypto Quant Signal Dashboard' to 'Cryptobex Rank'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ tr:hover{background:#1d2230;}
 </head>
 <body>
 
-<h1>📊 Crypto Quant Signal Dashboard</h1>
+<h1>📊 Cryptobex Rank</h1>
 
 <div class="controls">
     <input type="text" id="search" placeholder="Search Symbol (e.g. ADA)" />
