Update page title from 'Crypto Quant Dashboard' to 'Cryptobex Quantech'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Crypto Quant Dashboard</title>
+<title>Cryptobex Quantech</title>
 <style>
 body { font-family: Arial; background:#0e1117; color:#e6e6e6; margin:20px;}
 h1{text-align:center; margin-bottom:20px;}
