--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ tr:hover{background:#1d2230;}
         <option value="SELL">SELL</option>
         <option value="HOLD">HOLD</option>
     </select>
-    <button onclick="loadCSV()">刷新数据</button>
+    <button onclick="loadCSV()">Data Refresh<button>
 </div>
 
 <table>
